cabal-version: 2.4

name: happy-hour
version: 0.0.0.1

tested-with: GHC==8.6.3

extra-source-files: changelog.md

copyright: 2019 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Graphics.HappyHour

    build-depends:
        base ^>= 4.12.0.0
      , Chart ^>= 1.9.1
      , Chart-diagrams ^>= 1.9.2
